update to secondary blue color to fix color contrast accessibility audit on lighthouse

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
   --c-dark-gray: #4d4d4d;
   --c-white: #fff;
   --c-dark-blue: #115fb8;
-  --c-light-blue: #0070f3;
+  --c-light-blue: #006cea;
 
   /* Text */
   --t-primary: var(--c-dark-blue);
